anticipate performance issue on Firefox mobile, also message about it

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ table {
     font-family: sans-serif;
     font-size: 50px;
     background: black;
+    color: white;
 }
 
 table {
@@ -195,4 +196,12 @@ button {
 .warningButtons button{
     background-color: red;
     border-color: red;
+}
+
+.nextline {
+    clear: both;
+}
+
+.adviceSection {
+    font-size: 16px;
 }
